(library
 (name disco)
 (public_name disco)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_yojson_conv))
 (libraries
  disco.core
  disco.models
  disco.utils
  containers
  containers-data
  stdint
  relog.lib
  uri
  angstrom
  yojson
  mtime
  mtime.clock.os
  hxd.core
  hxd.string
  sodium
  opus
  websocketaf))
