(library
 (name disco_core)
 (public_name disco.core)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_yojson_conv))
 (libraries
  disco.models
  disco.utils
  containers
  containers-data
  stdint
  relog.lib
  uri
  mirage-crypto-rng.unix
  tls
  httpaf
  eio
  eio.unix
  angstrom
  yojson
  mtime
  mtime.clock.os
  hxd.core
  hxd.string
  sodium
  opus
  websocketaf))
