(library
 (name disco_voice)
 (public_name disco.voice)
 (optional)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_yojson_conv))
 (libraries
  disco.core
  disco.models
  disco.utils
  containers
  containers-data
  stdint
  relog.lib
  uri
  lwt
  lwt.unix
  lwt-pipe
  angstrom
  angstrom-lwt-unix
  yojson
  mtime
  mtime.clock.os
  hxd.core
  hxd.string
  piaf
  sodium
  opus
  websocketaf
  websocketaf-lwt-unix
  httpaf-lwt-unix))
