(library
 (name disco_voice)
 (public_name disco.voice)
 (optional)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_yojson_conv))
 (libraries
  disco.core
  disco.models
  disco.utils
  containers
  containers-data
  stdint
  relog.lib
  streaming
  eio
  eio.unix
  uri
  angstrom
  yojson
  mtime
  mtime.clock.os
  hxd.core
  hxd.string
  sodium
  opus
  websocketaf))
